--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: latest
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version:
+            - 16.x
+            - 18.x
+            - 20.x
       - name: Install dependencies
         run: npm ci
       - name: Lint files
@@ -24,20 +30,27 @@ jobs:
     name: Test
     strategy:
       matrix:
-        os: [ubuntu-latest]
-        node: [18.x, 16.x, 14.x]
+        os:
+          - ubuntu-latest
+        node:
+          - 18.x
+          - 16.x
+          - 14.x
         include:
-        - os: windows-latest
-          node: "18.x"
+          - os: windows-latest
+            node: 18.x
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node }}
-    - name: Install latest NPM
-      run: npm install -g npm@latest
-    - name: Install dependencies
-      run: npm ci
-    - name: Run tests
-      run: npm test
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version:
+            - 16.x
+            - 18.x
+            - 20.x
+      - name: Install latest NPM
+        run: bun i -g npm@latest --no-save
+      - name: Install dependencies
+        run: npm ci
+      - name: Run tests
+        run: npm test
