chore: generator-putout: v1.2.0

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "generator-putout",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A Yeoman generator for creating 🐊Putout plugins",
-  "keywords": ["putout", "yeoman-generator"],
+  "keywords": [
+    "putout",
+    "yeoman-generator"
+  ],
   "homepage": "https://github.com/putoutjs/generator-putout",
   "funding": "https://opencollective.com/putout",
   "bugs": "https://github.com/putoutjs/generator-putout/issues",
